--- a/extra-tests/classes/RollupFlowBulkProcessorTests.cls
+++ b/extra-tests/classes/RollupFlowBulkProcessorTests.cls
@@ -241,6 +241,9 @@ private class RollupFlowBulkProcessorTests {
 
   @IsTest
   static void shouldMapBulkFlowInputToRegularOne() {
+    Rollup.rollupMetadata = new List<Rollup__mdt>{
+      new Rollup__mdt(CalcItem__c = 'Opportunity', LookupFieldOnLookupObject__c = 'Id', LookupObject__c = 'User', RollupOperation__c = 'CONCAT')
+    };
     RollupFlowBulkProcessor.FlowInput input = new RollupFlowBulkProcessor.FlowInput();
     input.recordsToRollup = new List<SObject>{ new Opportunity(Amount = 5, Id = RollupTestUtils.createId(Opportunity.SObjectType)) };
     input.rollupContext = 'INSERT';
