WIP on full recalc optimizations for grandparent rollups

--- a/rollup/core/classes/RollupAsyncProcessor.cls
+++ b/rollup/core/classes/RollupAsyncProcessor.cls
@@ -828,6 +828,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
             roll.lookupObj,
             roll.oldCalcItems
           )
+          .setIsFullRecalc(this.isFullRecalc)
           .getParents(roll.calcItems);
       } else if (roll.traversal?.getIsFinished() == false) {
         roll.traversal.recommence();
