--- a/extra-tests/classes/RollupFullRecalcTests.cls
+++ b/extra-tests/classes/RollupFullRecalcTests.cls
@@ -879,6 +879,7 @@ private class RollupFullRecalcTests {
 
   @IsTest
   static void shouldAllowGrandparentRollupsFromParent() {
+    // TODO - WIP
     // also an integration test for having an ORDER BY statement
     // in RollupFullBatchRecalculator
     Account acc = [SELECT Id, OwnerId FROM Account];
@@ -919,6 +920,7 @@ private class RollupFullRecalcTests {
 
   @IsTest
   static void shouldAllowGrandparentRollupFromParentWithPolymorphicFields() {
+    // TODO - WIP
     // technically shouldAllowGrandparentRollupsFromParent also tests polymorphic fields
     // this test does that in conjunction with a more complicated where clause
     Account acc = [SELECT Id, OwnerId FROM Account];
