--- a/extra-tests/classes/RollupRelationshipFieldFinderTests.cls
+++ b/extra-tests/classes/RollupRelationshipFieldFinderTests.cls
@@ -87,6 +87,32 @@ private class RollupRelationshipFieldFinderTests {
   }
 
   @IsTest
+  static void skipsIntermediateRelationshipFetchesForFullRecalc() {
+    // same as above except this one should succeed since everything should be fetched in one go
+    Account acc = [SELECT Id, OwnerId, Owner.Name FROM Account];
+
+    // TODO - would be nice to also support something like Parent.Owner.Name from ContactPointAddress (polymorphic lookups, in general)
+    Contact con = new Contact(AccountId = acc.Id, LastName = 'Child con');
+    insert con;
+    control.MaxNumberOfQueries__c = 1;
+
+    RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
+      control,
+      new Rollup__mdt(GrandparentRelationshipFieldPath__c = 'Account.Owner.Name'),
+      uniqueFieldNames,
+      uniqueFieldNames,
+      User.SObjectType,
+      new Map<Id, SObject>()
+    );
+    finder.setIsFullRecalc(true);
+    RollupRelationshipFieldFinder.Traversal traversal = finder.getParents(new List<Contact>{ con });
+
+    System.assertEquals(true, traversal.getParentLookupToRecords().containsKey(acc.OwnerId));
+    System.assertEquals(acc.Owner.Name, traversal.retrieveParents(con.Id)[0].get('Name'));
+    System.assertEquals(true, traversal.getIsFinished());
+  }
+
+  @IsTest
   static void shouldNotReportFalsePositiveIfUltimateParentStaysTheSame() {
     Account intermediateOne = new Account(Name = 'Intermediate 1');
     Account intermediateTwo = new Account(Name = 'Intermediate 2');
