Finishing up an optimization for grandparent rollups triggered by full recalc runs - now, when a full recalc rollup has already queried up the hierarchy, we can assume all children are already present in RollupRelationshipFieldFinder, instead of re-traversing the entire hierarchy.

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -2212,6 +2212,9 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     wrappedMeta.metadata.add(innerMeta);
     RollupEvaluator.WhereFieldEvaluator eval = String.isBlank(whereClause) ? null : RollupEvaluator.getWhereEval(whereClause, childType);
     wrappedMeta.queryFields.addAll(getQueryFieldsFromMetadata(innerMeta, eval));
+    if (innerMeta.IsRollupStartedFromParent__c && innerMeta.GrandparentRelationshipFieldPath__c != null) {
+      wrappedMeta.queryFields.add(innerMeta.GrandparentRelationshipFieldPath__c);
+    }
     return wrappedMeta;
   }
 
