Continued optimizations within RollupFlowBulkProcessor

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -809,7 +809,10 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
       List<Rollup__mdt> metas = new List<Rollup__mdt>(wrapper.rollupMetadata);
       wrapper.flowInput.recordsToRollup = replaceFlowInputCalcItemsIfNecessary(hashCodeToCalcItems, wrapper.flowInput.recordsToRollup, metas);
       wrapper.flowInput.oldRecordsToRollup = replaceFlowInputCalcItemsIfNecessary(hashCodeToCalcItems, wrapper.flowInput.oldRecordsToRollup, metas);
-      Map<Id, SObject> oldFlowRecords = new Map<Id, SObject>(wrapper.flowInput.oldRecordsToRollup);
+      Map<Id, SObject> oldFlowRecords = new Map<Id, SObject>();
+      for (SObject oldFlowRecord : wrapper.flowInput.oldRecordsToRollup) {
+        oldFlowRecords.put(oldFlowRecord.Id, oldFlowRecord);
+      }
       processCustomMetadata(
         localRollups,
         metas,
